--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,29 @@
-freeze 
+autopep8==1.5.7
+certifi==2021.5.30
+chardet==3.0.4
+click==8.0.1
+colorama==0.4.4
+comtypes==1.1.4
+et-xmlfile==1.1.0
+Flask==2.0.1
+funkify==0.3.0
+idna==2.7
+itsdangerous==2.0.1
+Jinja2==3.0.1
+lxml==4.6.3
+MarkupSafe==2.0.1
+openpyxl==3.0.7
+Pillow==8.2.0
+pycodestyle==2.7.0
+PyMySQL==1.0.2
+PyPDF2==1.26.0
+python-docx==0.8.11
+python-pptx==0.6.19
+pytz==2016.7
+pywin32==301
+requests==2.25.1
+requires==0.9.0
+toml==0.10.2
+urllib3==1.24.3
+Werkzeug==2.0.1
+XlsxWriter==1.4.3
