--- a/static/manifest.json
+++ b/static/manifest.json
@@ -5,7 +5,7 @@
     "background_color": "#fc980c",
     "icons": [
         {
-            "src": "../imgs/logo.png",
+            "src": "/images/logo.png",
             "sizes": "192x192",
             "type": "image/png"
         }
