--- a/static/manifest.json
+++ b/static/manifest.json
@@ -10,6 +10,7 @@
             "type": "image/png"
         }
     ],
-    "start_url": "",
+    "scope": "/",
+    "start_url": "/",
     "display": "fullscreen"
 }
